--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ pages/*
 !pages/bachelor-thesis.pdf
 !pages/bachelor-thesis.tex
 !pages/itmo-student-thesis.cls
+
+java_driver/node_modules/*
+ts_driver/node_modules/*
