Update subtyping detection
- improve caching
- change returning declarations in Arraylist to returning them in arguement AutoHashSet
- Keep subtype info in subtyping graph rather than in pairs
- fix subtype detection when inserting new nominative
- fix solving position of constraint defined TypeNode
- add algorithm on poset
- many more

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
 zig-cache
 zig-out
 
+graph
+cache
+
 pages/*
 !pages/bachelor-thesis.pdf
 !pages/bachelor-thesis.tex
 !pages/itmo-student-thesis.cls
 
 java_driver/node_modules/*
+java_driver/*
 ts_driver/node_modules/*
+kotlin_driver/node_modules/*
+koltin_driver/declarations.txt
 
 src/language/*
